# Biomedical-IMAGE-Analysis

./: Menu.m  README.md  set_BIDS.m
Algorithms/Deep Learning/: 3Dresize.ipynb  Image_Networks_Intro.ipynb  Lab4 - Deep Learning.ipynb
Algorithms/Filtering/image_samples/: IM_00023-impulsive_output.TIF
Algorithms/Registration/: lab3.ipynb
Algorithms/Registration/Extension_HRL/: CMakeLists.txt  lab3.ipynb
Algorithms/Registration/Extension_HRL/Correlation_2/: CMakeLists.txt  Correlation_2.py
Algorithms/Registration/Extension_HRL/HelloPython/: HelloPython.py
Algorithms/Registration/Extension_HRL/Helloword/: CMakeLists.txt  Helloword.py
Algorithms/Segmentation/: Active Contours.ipynb  Ginput example.ipynb  Region Growing.ipynb  Watershed.ipynb
Algorithms/filtering/: HRLsoftware.py
Filters & Image_Enhancement/: MIA code notes.ipynb
Filters & Image_Enhancement/Enhancement/: Examples.html  Examples.ipynb  gamma_correction.py  log_correction.py
Processes Automation/: BIDS_dcm2nii.m  DWI_Correction_Pipeline_AGESII.m  FSLaso-topup_v1.ipynb  Menu.m  Reading_Pipe_Configuration_File.m  Run_DTI_Pipeline_AGESII.m  SP_fieldmap.m  SP_fieldmap_v2.m  Segmentation_Nipype.py  VBM_Nipype.py  set_BIDS.m  spms.m
Processes Automation/Matlab (only)/: Manual.docx  Matlab.url
Processes Automation/scripts (all)/: DWI_Correction_Pipeline_AGESII.m  Run_DTI_Pipeline_AGESII.m
Processes Automation/scripts (all)/DTI/: SP_topup-Duran-v2.ipynb  SP_topup.ipynb  graph.png - Shortcut.lnk  urjc-my.sharepoint.com.url
Processes Automation/scripts (all)/VBM/: Coregister12.m  Groups.m  (+17 more)
(+42 files in other folders)
